[project]
name = "pst-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "pip>=26.1.1",
    "requests>=2.34.2",
    "selenium>=4.44.0",
]
